--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ pandas>=1.2.0
 numpy>=1.19.0
 PyQt5>=5.15.0
 matplotlib>=3.3.0
+pdfplumber>=0.7.0
+ruptures>=1.1.0
+hmmlearn>=0.2.8
+statsmodels>=0.14.0
+scikit-learn>=1.3.0
