--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,11 @@ dependencies:
   - pandas>=1.2.0
   - numpy>=1.19.0
   - matplotlib>=3.3.0
+  - scikit-learn>=1.3.0
+  - statsmodels>=0.14.0
   - pip
   - pip:
     - PyQt5>=5.15.0  # PyQt5 is often better installed via pip even in conda environments
+    - pdfplumber>=0.7.0
+    - ruptures>=1.1.0
+    - hmmlearn>=0.2.8
